--- a/src/App.scss
+++ b/src/App.scss
@@ -127,22 +127,25 @@ img {
 }
 
 .project {
+  position: relative;
   width: 30%;
   height: 100%;
   border-radius: 5px;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   .picture {
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px;
     margin: 0%;
   }
   .description {
-    margin: 0% 1% 0 1%;
-    font-size: medium;
-    font-weight: 200;
+    .text-style {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 1.3vw;
+      margin: 5% 0% 0% 5%;
+    }
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .img {
     display: none;
   }
@@ -150,6 +153,9 @@ img {
     width: 30px;
     height: 30px;
   }
+}
+
+@media screen and (max-width: 800px) {
   .title,
   .sub-title {
     text-align: center;
@@ -171,17 +177,20 @@ img {
   h2 {
     font-size: 10px;
   }
-  .description {
-
-  }  
+ 
   .project {
     width: 60%;
     height: 30px;
-    flex-direction: row;
   }
   .picture {
     width: 60%;
     height: 30px;
+  }
+  .description {
+    position: absolute;
+    left: 70%;
+    top: 2px;
+    margin: 0%;
   }
 
 }
